--- a/docs/.vuepress/styles/index.scss
+++ b/docs/.vuepress/styles/index.scss
@@ -7,3 +7,20 @@
     min-width: 184.66px;
   }
 }
+
+
+.theorem {
+  margin: 1rem 0;
+  padding: .1rem 1.5rem;
+  border-radius: 0.4rem;
+  background-color: #f0f4f8;
+  .title {
+     font-weight: bold;
+  }
+}
+
+.right {
+font-size: 0.9rem;
+text-align: right;
+}
+
